nav links mobile visiblity err fixed

--- a/components/movie/MoviePic.module.scss
+++ b/components/movie/MoviePic.module.scss
@@ -2,14 +2,10 @@
 
 .movie_box {
   $size: 9rem;
-  $radius: 5px;
   width: $size;
   height: $size * 1.5;
-  border-radius: $radius;
-  overflow: hidden;
   margin: 2rem;
   border: none;
-  display: flex;
   position: relative;
   overflow: visible;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
